fix: editor mode theme

--- a/apps/rem/src/styles/globals.css
+++ b/apps/rem/src/styles/globals.css
@@ -194,3 +194,9 @@ input[type='number']::-webkit-outer-spin-button {
 ::-webkit-scrollbar {
   display: none; /* Chrome Safari */
 }
+
+.editor-wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
