--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -200,3 +200,19 @@ input[type='number']::-webkit-outer-spin-button {
   width: 100%;
   height: 100%;
 }
+
+.affine-default-page-block-title-container {
+  margin-top: 78px;
+  margin-bottom: 40px;
+}
+
+.affine-default-page-block-container {
+  max-width: 686px;
+}
+
+affine-block-hub {
+  position: unset !important;
+}
+.block-hub-menu-container {
+  position: unset !important;
+}
